--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="A clean, local-first todo list built with Vite + React."
+      content="一个使用 Vite + React 构建的简洁、本地优先待办清单。"
     />
-    <title>AI Todo</title>
+    <title>AI 待办</title>
   </head>
   <body>
     <div id="root"></div>
